@@ -39,6 +39,7 @@ Luke Howard retains copyright in all contributed code.
 	Michael Mattice <mike@bmisystems.com>
 	Dejan Muhamedagic <dejan.muhamedagic@at.ibm.com>
 	Doug Nazar <nazard@dragoninc.on.ca>
+	Frode Nordahl <frode@nordahl.net>
 	Lars Oergel <lars.oergel@innominate.de>
 	Fredrik Ohrn <ohrn@chl.chalmers.se>
 	Rakesh Patel <rpatel@globix.com>
